--- a/url_shortifier/shortifier/templates/shortifier/url_detail.html
+++ b/url_shortifier/shortifier/templates/shortifier/url_detail.html
@@ -26,7 +26,7 @@
         {% for field in form %}
         {% if field.value %}
 
-            <div class="form-group" align="center">
+            <div class="form-group col-md-8" align="center">
                 <label for="{{ field.id_for_label }}"> {{ field.label }}</label>
                 <div class="form-group">
                     {{ field }}
