--- a/url_shortifier/shortifier/templates/shortifier/index.html
+++ b/url_shortifier/shortifier/templates/shortifier/index.html
@@ -1,24 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-</head>
-<body>
-<div class="container" align="center">
-    <h1>
-        <h2>Сервис генерирования коротких ссылок</h2>
-    </h1>
+{% extends 'shortifier/base.html' %}
 
 
-</div>
-
-
+{% block title %} Сервис генерирования коротких ссылок {% endblock %}
+{% block content %}
 <div class="container col-md-5" align="center">
+    {% for error in form.non_field_errors %}
+        <span class="error-message">{{ error }}</span>
+    {% endfor %}
+
     <form action="{% url 'index' %}" method="POST">
         {% csrf_token %}
         <div class="form-group">
@@ -27,6 +16,4 @@
         <button type="submit" class="btn btn-primary">Получить короткую ссылку</button>
     </form>
 </div>
-
-</body>
-</html>
+{% endblock content %}
