--- a/url_shortifier/shortifier/templates/shortifier/base.html
+++ b/url_shortifier/shortifier/templates/shortifier/base.html
@@ -9,6 +9,29 @@
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="{% url 'index' %}
+  ">Pretty-URL</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">API <span class="sr-only">(current)</span></a>
+      </li>
+        <li>
+            <a class="nav-link" href="{% url 'contact' %}
+            ">Обратная связь <span class="sr-only">(current)</span></a>
+        </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Дешифровать URL</button>
+    </form>
+  </div>
+</nav>
 <div class="container" align="center">
     <h1>
         <h2>Сервис генерирования коротких ссылок</h2>
@@ -20,5 +43,7 @@
 {% block content %}
 
 {% endblock content %}
+<script src=" {% static 'shortifier/js/scripts.js' %}"></script>
+
 </body>
 </html>
