added search url

--- a/url_shortifier/shortifier/templates/shortifier/base.html
+++ b/url_shortifier/shortifier/templates/shortifier/base.html
@@ -19,15 +19,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">API <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'schema-swagger-ui' %}
+        ">API <span class="sr-only">(current)</span></a>
       </li>
         <li>
             <a class="nav-link" href="{% url 'contact' %}
             ">Обратная связь <span class="sr-only">(current)</span></a>
         </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="GET">
+      <input class="form-control mr-sm-2" type="search" placeholder="Зашифрованный URL" name="q" aria-label="Дешифровать">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Дешифровать URL</button>
     </form>
   </div>
