--- a/url_shortifier/shortifier/templates/shortifier/contact.html
+++ b/url_shortifier/shortifier/templates/shortifier/contact.html
@@ -1,9 +1,12 @@
 {% extends 'shortifier/base.html' %}
-{% load static %}
-{% block content %}
-<div class="container col-md-8" align="center">
-    С пожеланиями и обращениями писать на почту: damizinatullin@mail.ru
-</div>
+{% block title %}
+Обратная связь
+{% endblock title %}
 
-{% endblock  %}
+{% block h2 %}
+Обратная связь
+{% endblock %}
+{% block content %}
+С пожеланиями и обращениями писать на почту: damizinatullin@mail.ru
+{% endblock content %}
 
