--- a/url_shortifier/shortifier/templates/shortifier/base.html
+++ b/url_shortifier/shortifier/templates/shortifier/base.html
@@ -10,40 +10,41 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'index' %}
+    <a class="navbar-brand" href="{% url 'index' %}
   ">Pretty-URL</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'schema-swagger-ui' %}
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'schema-swagger-ui' %}
         ">API <span class="sr-only">(current)</span></a>
-      </li>
-        <li>
-            <a class="nav-link" href="{% url 'contact' %}
+            </li>
+            <li>
+                <a class="nav-link" href="{% url 'contact' %}
             ">Обратная связь <span class="sr-only">(current)</span></a>
-        </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="GET">
-      <input class="form-control mr-sm-2" type="search" placeholder="Зашифрованный URL" name="q" aria-label="Дешифровать">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Дешифровать URL</button>
-    </form>
-  </div>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="GET">
+            <input class="form-control mr-sm-2" type="search" placeholder="Зашифрованный URL" name="q"
+                   aria-label="Дешифровать">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Дешифровать URL</button>
+        </form>
+    </div>
 </nav>
-<div class="container" align="center">
-    <h1>
-        <h2>Сервис генерирования коротких ссылок</h2>
-    </h1>
 
+<div class="container col-md-8" align="center">
+    <h2> {% block h2 %}
+        Сервис генерирования коротких ссылок
+        {% endblock %}</h2>
+    <hr>
+    {% block content %}
 
+    {% endblock content %}
 </div>
-
-{% block content %}
-
-{% endblock content %}
 <script src=" {% static 'shortifier/js/scripts.js' %}"></script>
 
 </body>
