--- a/url_shortifier/shortifier/templates/include/header.html
+++ b/url_shortifier/shortifier/templates/include/header.html
@@ -16,9 +16,9 @@
                 <a class="nav-link" href="{% url 'contact' %}
             ">Обратная связь <span class="sr-only">(current)</span></a>
             </li>
-             {% if request.user.is_authenticated %}
+            {% if request.user.is_authenticated %}
             <li>
-                <a class="nav-link" href="admin/">Admin<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/admin/">Admin<span class="sr-only">(current)</span></a>
             </li>
             {% endif %}
         </ul>
